--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ wp-content/mu-plugins/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php/
 wp-content/themes/node_modules/
+wp-content/themes/package-lock.json
 .htaccess
 /license.txt
 /readme.html
